--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>MY AMBITION</h1>
     <img src="./assets/AvatarMaker.png" alt="avatar" id="avatar">
     <h2>Ananya</h2>
-    <p>Hello! My name is Ananya. I am a student at ProgradJunior. I am in grade 8. I live in India. My fav color is blue
+    <p>Hello! My name is Ananya. I am a student at ProGrad Junior. I am in grade 8. I live in India. My fav color is blue
         and fav animal is the tiger. I also like to play outdoor games a lot.</p>
     <h2>My Ambition is to become a Software Developer</h2>
     <img src="./assets/developer.jpg" alt="ambition" id="ambition">
